--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@ node_modules
 .cache
 .parcel-cache
 package-lock.json
+.DS_Store
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env
+.env.*
+dist
+build
+coverage
+.idea
+.vscode
+*.local
+*.sublime-workspace
+*.sublime-project
+*.swp
+*.tmp
+*.bak
+Thumbs.db
+# End of Selection
+```
